--- a/style.css
+++ b/style.css
@@ -135,7 +135,7 @@ a img {
     width: 100%;
     z-index: 1;
   }
-  
+  /* navbar links */
   .navbar a {
     color: #fff;
     text-decoration: none;
